Fix logo stretch

--- a/client/src/pages/clubPage.css
+++ b/client/src/pages/clubPage.css
@@ -1,26 +1,3 @@
-/* Global styles */
-body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-
-    height: 100vh;
-    background-color: #f5f5f5;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-  
-.logo {
-    display: block;
-    max-width: 80%;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    width: 100vh ;
-    height: 40vh;
-    padding-top: 2em;
-    
-}
-
 header {
 
     background-color: #F2EAD0;
